# storage-wizard

./: .coverage  .gitignore  CHECKPOINT_V0.3.2_QR_AND_DUPLICATE_ANALYSIS.md  CHECKPOINT_V0.3.3_CACHE_MANAGEMENT.md  CHECKPOINT_V0.3.4_CACHE_VERSIONING.md  CHECKPOINT_V0.3.5_FAST_SCANNER.md  CHECKPOINT_V0.3.6_FAST_TREEMAP.md  CHECKPOINT_V0.3.7_MULTI_PATH_FAST_TREEMAP.md  CHECKPOINT_V0.3.8_REPOSITORY_CLEANUP.md  CHECKPOINT_V0.3.9.1_SIDE_BY_SIDE_COMPARISON_PROPOSAL.md  CHECKPOINT_V0.3.9.2_SIDE_BY_SIDE_COMPARISON_IMPLEMENTED.md  CHECKPOINT_V0.3.9.3_ENHANCED_SIDE_BY_SIDE_COMPARISON.md  CHECKPOINT_V0.3.9.4_DISPLAY_OPTIMIZATION_AND_OFFLINE_CATALOG.md  CHECKPOINT_V0.3.9_COMPARE_FILTERING.md  CHECKPOINT_VIMDIFF_OUTPUT.md  COMPARISON_OPTIMIZATION.md  GLOB_EXPANSION_GUIDE.md  IMAGE_VISUALIZATION_GUIDE.md  LICENSE  MULTI_PATH_USAGE.md  README.md  VERSION_0.1_CHECKPOINT.md  VERSION_0.2_CHECKPOINT.md  VERSION_0.3_CHECKPOINT.md  VISUALIZATION_GUIDE.md  create_readable_qr.py  decode_qr.py  decode_qr_simple.py  drive_label.txt  extract_hashes.py  find_large_duplicates.py  manage_cache.py  manual_intersection.txt  paths.out  pyproject.toml  qr_test.txt  simple_qr_generator.py  visualize_cache_images.py  visualize_cached_data.py
python/storage_wizard/: __init__.py  __main__.py  cli.py  core.py  fast_scanner.py  fast_treemap.py  treemap.py
python/storage_wizard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/rust/: lib.rs  (+1 more)
test/: run_tests.sh
tests/: test_core.py  test_glob_expansion.py  test_glob_simple.py  test_scenarios.md  test_treemap.py
(+18 files in other folders)
