[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "storage-wizard"
version = "0.1.0"
description = "Read-only storage indexing and optimization tool"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "rich>=12.0.0",
    "typer>=0.6.0",
    "pydantic>=1.10.0",
    "qrcode[pil]>=7.0.0",
] 

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "black>=22.0.0", "ruff>=0.0.200"]

[project.scripts]
storage-wizard = "storage_wizard.cli:main"

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools]
build_editable = true

[tool.setuptools.package-data]
storage_wizard = ["py.typed"]
